k8slearn/10.Kubernetes 日志/10.4.Loki/Manifest/3.读写分离模式/grafanaDashboard-ingress.yaml
# grafanaDashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dashboard
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: loki-grafana.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
