k8slearn/10.Kubernetes 日志/10.4.Loki/Manifest/3.读写分离模式/minioDashboard-ingress.yaml
# minioDashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dashboard
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: minio.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-minio
                port:
                  number: 9000
